HW3/hw3.txt
Q1: Since the goto statement is deleted, then the label "case_long_iso_tim
e_style:" will not be called anymore. However, it is not necessary to remo
ve it.

Q2: Besides the desired changes that this patch makes, it also replaces th
e time by the year for files that are at least a year old. Furthermore, si
nce this modification will force the date to be displayed in a specific fo
rmat, disregarding the locale, non-English speaking users will not underst
and this format.

Q3: When I invoked randline.py on an empty file, the following was generat
ed:

Traceback (most recent call last):
  File "randline.py", line 70, in <module>
    main()
  File "randline.py", line 64, in main
    sys.stdout.write(generator.chooseline())
  File "randline.py", line 34, in chooseline
    return random.choice(self.lines)
  File "/usr/local/cs/Python-2.7.10/lib/python2.7/random.py", line 275, in
   choice
    return seq[int(self.random() * len(seq))]  # raises IndexError if seq 
    is empty
IndexError: list index out of range

Several error messages are thrown out because there is 0 line to be access
ed by the class randline. Specifically, error message "IndexError: list in
dex out of range" is thrown because seq is empty. 

Q4: When I invoke randline.py with python3, I get the following:

File "randline.py", line 65
    except IOError as (errno, strerror):
                      ^
SyntaxError: invalid syntax

This syntaxError is thrown using python3 because in python2, exceptions ar
e iterable and you can iterate over the parameters given to the exception 
by iterating over the exception itself.
